--- a/app/src/main/res/layout/activity_like_profile.xml
+++ b/app/src/main/res/layout/activity_like_profile.xml
@@ -77,7 +77,7 @@
             android:layout_gravity="bottom"
             android:padding="20sp"
             android:textColor="@color/colorBlack"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/buttonLayout"
@@ -103,6 +103,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
+                android:onClick="onClick"
                 android:backgroundTint="@color/colorWhite"
                 android:clickable="true"
                 android:elevation="2sp"
