--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -46,7 +46,7 @@
                 android:shadowColor="@color/colorBlack"/>
 
             <TextView
-                android:id="@+id/time"
+                android:id="@+id/distance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
