--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -33,11 +33,17 @@
                 android:scaleType="centerCrop"
                 android:layout_above="@+id/name"
                 />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="2"
+                android:layout_gravity="bottom">
             <TextView
-                android:layout_gravity="bottom"
                 android:id="@+id/name"
                 android:textSize="30sp"
-                android:padding="20sp"
+                android:layout_weight="1"
+                android:padding="5sp"
                 android:textColor="@color/colorWhite"
                 tools:text="hello"
                 android:layout_width="match_parent"
@@ -47,15 +53,17 @@
 
             <TextView
                 android:id="@+id/distance"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:padding="20sp"
+                android:padding="5sp"
                 android:shadowColor="@color/colorBlack"
                 android:shadowRadius="20"
                 android:textColor="@color/colorWhite"
                 android:textSize="30sp"
                 tools:text="hello" />
+            </LinearLayout>
 
         </FrameLayout>
     </android.support.v7.widget.CardView>
