--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -44,6 +44,7 @@
                 android:textSize="30sp"
                 android:layout_weight="1"
                 android:padding="5sp"
+                android:drawableLeft="@drawable/ic_person_red_300_24dp"
                 android:textColor="@color/colorWhite"
                 tools:text="hello"
                 android:layout_width="match_parent"
@@ -57,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
+                android:drawableLeft="@drawable/ic_person_pin_circle_red_300_24dp"
                 android:padding="5sp"
                 android:shadowColor="@color/colorBlack"
                 android:shadowRadius="20"
