--- a/app/src/main/res/layout/activity_zoom_card.xml
+++ b/app/src/main/res/layout/activity_zoom_card.xml
@@ -32,32 +32,83 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <TextView
-            android:drawableLeft="@drawable/ic_user"
-            android:drawableTint="@color/colorBlack"
-            android:drawablePadding="10sp"
-            android:text="job"
-            android:layout_gravity="bottom"
-            android:id="@+id/job"
-            android:textSize="20sp"
-            android:padding="20sp"
-            android:textColor="@color/colorBlack"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:weightSum="3"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/job"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|start"
+                android:drawableLeft="@drawable/ic_person_pin_red_300_24dp"
+                android:drawablePadding="10sp"
+                android:padding="10sp"
+                android:text="job"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/distance"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:drawableLeft="@drawable/ic_person_pin_circle_red_300_24dp"
+                android:drawablePadding="10sp"
+                android:padding="10sp"
+                android:text="km"
+                android:textColor="@color/colorBlack"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:background="@color/colorBlack"/>
+            android:background="@color/colorBlack" />
 
         <TextView
-            android:layout_gravity="bottom"
             android:id="@+id/about"
-            android:textSize="16sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:padding="20sp"
             android:textColor="@color/colorBlack"
+            android:textSize="20sp" />
+
+        <LinearLayout
+            android:id="@+id/buttonLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10sp"
+            android:gravity="center">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabNopeProfileZ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="@drawable/ic_nope_gif"
+                app:backgroundTint="@android:color/transparent"
+                app:elevation="2sp" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabLikeProfileZ"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10sp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="@drawable/ic_like_gif"
+                android:onClick="onClick"
+                app:backgroundTint="@android:color/transparent"
+                app:elevation="2sp" />
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
