--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="top"
     android:orientation="vertical"
     android:background="@color/colorDeadBackground">
 
@@ -70,7 +71,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center">
 
@@ -82,10 +83,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20sp"
-                android:text="S t u r r d"
+                android:text="@string/s_t_u_r_r_d"
                 android:textColor="@color/colorPrimary"
                 android:textSize="30sp"
-                android:fontFamily="sans-serif-medium"/>
+                app:fontFamily="@font/font_montserrat"/>
 
 
     </LinearLayout>
