--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NotifyFrags.NewMatchesFrag">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/layoutNewMatches"
         android:orientation="vertical">
+
         <TextView
             android:paddingTop="30sp"
-            android:paddingLeft="20sp"
+            android:paddingLeft="5sp"
             android:paddingBottom="5sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorPrimary"
+            android:text="@string/explore_sturrd"
             app:fontFamily="@font/font_montserrat"
-            android:text="@string/new_matches"
             android:textStyle="bold" />
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/new_match"
-            android:scrollbars="horizontal">
+            android:id="@+id/explore"
+            android:scrollbars="vertical">
         </android.support.v7.widget.RecyclerView>
+
+
+
     </LinearLayout>
 
-
-</FrameLayout>
+</ScrollView>
