--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".NotifyFrags.LikesFragment">
 
     <LinearLayout
@@ -18,6 +19,7 @@
             android:paddingTop="30sp"
             android:paddingBottom="5sp"
             android:text="@string/new_likes"
+            app:fontFamily="@font/font_montserrat"
             android:textColor="@color/colorPrimary"
             android:textStyle="bold" />
 
