--- a/app/src/main/res/layout/item_explor_card.xml
+++ b/app/src/main/res/layout/item_explor_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/explore_cards"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:elevation="2dp"
+        app:elevation="2dp"
         app:cardCornerRadius="4dp">
 
         <FrameLayout
@@ -27,7 +28,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/imageEplore"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/name"
@@ -42,30 +43,30 @@
                 android:weightSum="2">
 
                 <TextView
-                    android:id="@+id/name"
+                    android:id="@+id/nameExplore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/ic_person_red_300_24dp"
-                    android:padding="5sp"
+                    android:padding="1sp"
                     android:shadowColor="@color/colorBlack"
                     android:shadowRadius="20"
                     android:textColor="@color/colorWhite"
-                    android:textSize="30sp"
+                    android:textSize="18sp"
                     tools:text="hello" />
 
                 <TextView
-                    android:id="@+id/distance"
+                    android:id="@+id/distanceExplore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_weight="1"
                     android:drawableLeft="@drawable/ic_person_pin_circle_red_300_24dp"
-                    android:padding="5sp"
+                    android:padding="1sp"
                     android:shadowColor="@color/colorBlack"
                     android:shadowRadius="20"
-                    android:textColor="@color/colorWhite"
-                    android:textSize="30sp"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="16sp"
                     tools:text="hello" />
             </LinearLayout>
 
