--- a/app/src/main/res/layout/item_like_list_fragment.xml
+++ b/app/src/main/res/layout/item_like_list_fragment.xml
@@ -3,58 +3,67 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/like_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="10sp">
+    >
 
     <android.support.v7.widget.CardView
         android:id="@+id/like_cards"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="5dp"
         app:cardCornerRadius="10dp"
-
+        android:layout_margin="5dp"
         app:cardElevation="3dp"
         app:cardPreventCornerOverlap="false"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
-            android:id="@+id/laycardlinearlike"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorWhite"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="12dp">
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/LikeImage"
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:src="@mipmap/ic_user_default" />
-
-            <TextView
-                android:id="@+id/LikeName"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/laycardlinearlike"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:paddingBottom="5sp"
-                android:text="Like's Name"
-                android:textColor="@color/colorBlack"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:background="@color/colorWhite"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:padding="5dp">
+
+                <ImageView
+                    android:id="@+id/LikeImage"
+                    android:layout_width="60sp"
+                    android:layout_height="60sp"
+                    android:src="@mipmap/ic_user_default" />
+
+                <TextView
+                    android:id="@+id/LikeName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:gravity="center"
+                    android:paddingBottom="5sp"
+                    android:text="Like's Name"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
 
         </LinearLayout>
+
+
     </android.support.v7.widget.CardView>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorPrimaryDark" />
+        android:background="@android:color/darker_gray" />
+
+
 
 </LinearLayout>
