--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -57,26 +57,50 @@
     <LinearLayout
         android:id="@+id/sendLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
         android:paddingLeft="20sp"
         android:background="@drawable/chat_edit_text_background"
-        android:layout_margin="10sp">
+        android:layout_margin="10sp"
+        android:paddingStart="20sp">
+
         <EditText
             android:background="@null"
             android:layout_weight="0.8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="message..."
+            android:layout_height="match_parent"
+            android:hint="@string/edit_text_message_hint"
             android:id="@+id/message"
             />
+
         <ImageView
             android:src="@drawable/ic_send"
             android:layout_weight="0.2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_height="match_parent"
             android:id="@+id/send"/>
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_weight="0.2"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_mic_black_24dp"
+            android:id="@+id/record_button"/>
+        <TextView
+            android:layout_gravity="center"
+            android:textColor="#E90909"
+            android:id="@+id/cancel_recording"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:layout_marginRight="8dp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:textSize="20sp"
+            android:layout_marginEnd="8dp" />
+
     </LinearLayout>
+
 
 </RelativeLayout>
