--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -11,23 +11,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- TODO: Update blank fragment layout -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="20sp"
-            android:paddingTop="30sp"
-            android:paddingBottom="5sp"
-            android:text="@string/new_likes"
-            app:fontFamily="@font/font_montserrat"
-            android:textColor="@color/colorPrimary"
-            android:textStyle="bold" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/likesRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="horizontal"/>
+            android:text="MOMENTS"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="23sp"/>
     </LinearLayout>
 
 </FrameLayout>
