--- a/app/src/main/res/layout/item_like_list_fragment.xml
+++ b/app/src/main/res/layout/item_like_list_fragment.xml
@@ -4,66 +4,36 @@
     android:id="@+id/like_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:orientation="vertical"
-    >
+    android:layout_margin="5dp">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/like_cards"
+    <LinearLayout
+        android:id="@+id/laycardlinearlike"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="5dp"
-        app:cardElevation="3dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="5dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/LikeImage"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:src="@mipmap/ic_user_default" />
+
+        <TextView
+            android:id="@+id/LikeName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginLeft="5dp"
+            android:gravity="center"
+            android:paddingBottom="5sp"
+            android:text="Like's Name"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"
+            android:textStyle="normal" />
 
-            <LinearLayout
-                android:id="@+id/laycardlinearlike"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorWhite"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="5dp">
-
-                <ImageView
-                    android:id="@+id/LikeImage"
-                    android:layout_width="60sp"
-                    android:layout_height="60sp"
-                    android:src="@mipmap/ic_user_default" />
-
-                <TextView
-                    android:id="@+id/LikeName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:gravity="center"
-                    android:paddingBottom="5sp"
-                    android:text="Like's Name"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-    </android.support.v7.widget.CardView>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
-
+    </LinearLayout>
 
 
 </LinearLayout>
