--- a/app/src/main/res/layout/item_match_list.xml
+++ b/app/src/main/res/layout/item_match_list.xml
@@ -1,75 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/match_cards"
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="5dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="3dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true">
+        app:layout_constraintBottom_toTopOf="@+id/MatchName"
+        app:layout_constraintTop_toTopOf="@+id/MatchName">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/MatchImage"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:src="@mipmap/ic_user_default"
+            app:layout_constraintEnd_toStartOf="@+id/MatchName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/MatchName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="1dp"
+            android:text="@string/match_s_name"
+            android:textColor="@color/colorBlack"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toEndOf="@+id/MatchImage" />
 
-            <RelativeLayout
-                android:id="@+id/laycardlinearMatches"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorWhite"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="5dp">
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-                <ImageView
-                    android:id="@+id/MatchImage"
-                    android:layout_width="60sp"
-                    android:layout_height="60sp"
-                    android:layout_centerVertical="true"
-                    android:src="@mipmap/ic_user_default" />
-
-                <TextView
-                    android:id="@+id/MatchName"
-                    android:layout_width="wrap_content"
-                    android:layout_toRightOf="@id/MatchImage"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="5dp"
-                    android:paddingBottom="5sp"
-                    android:text="@string/match_s_name"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_toEndOf="@id/MatchImage" />
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_toRightOf="@id/MatchName"
-                    android:layout_centerVertical="true"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_send_small"
-                    android:tint="@color/colorPrimaryDark"
-                    android:layout_alignParentEnd="true" />
-
-            </RelativeLayout>
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="193dp"
+            android:layout_marginRight="193dp"
+            android:foregroundGravity="end"
+            android:src="@drawable/ic_send_small"
+            android:tint="@color/colorPrimaryDark"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/MatchName"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
-
-    </android.support.v7.widget.CardView>
 
     <View
         android:layout_width="match_parent"
