fixed lagging views on matches and likes layout

--- a/app/src/main/res/layout/item_like_list_fragment.xml
+++ b/app/src/main/res/layout/item_like_list_fragment.xml
@@ -25,9 +25,9 @@
             android:id="@+id/LikeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
             android:gravity="center"
             android:paddingBottom="5sp"
+            android:fontFamily="@font/font_montserrat"
             android:text="Like's Name"
             android:textColor="@color/colorBlack"
             android:textSize="16sp"
