--- a/app/src/main/res/layout/item_moments.xml
+++ b/app/src/main/res/layout/item_moments.xml
@@ -86,7 +86,7 @@
                 android:id="@+id/fabS"
                 android:layout_above="@id/navigation"
                 android:layout_width="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="15dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -99,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5dp"
                     android:src="@drawable/ic_reply"
-                    android:tint="@color/colorPrimaryDark"
+                    android:tint="@color/colorPrimary"
                     app:backgroundTint="@android:color/white"
                     app:elevation="2sp"
                     app:fabSize="auto"
