--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBlack"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
 
     <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -43,9 +43,9 @@
 
         <LinearLayout
             android:id="@+id/fabS"
-            android:layout_above="@id/navigation"
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="70dp"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
@@ -71,17 +71,9 @@
                 android:src="@drawable/ic_like"
                 app:backgroundTint="@color/colorWhite"
                 app:elevation="2sp"
-                app:layout_constraintBottom_toBottomOf="@+id/navigation"
-                app:layout_constraintEnd_toEndOf="parent" />
+                />
         </LinearLayout>
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:layout_alignParentBottom="true"
-            app:menu="@menu/navigation" />
     </RelativeLayout>
 
 
