--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorDeadBackground"
-    android:layout_gravity="center_vertical"
+    android:background="@color/colorWhite"
+    android:layout_gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
