--- a/app/src/main/res/layout/item_match_list.xml
+++ b/app/src/main/res/layout/item_match_list.xml
@@ -21,6 +21,7 @@
             android:id="@+id/MatchImage"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
+            android:padding="5dp"
             android:layout_weight="1"
             android:src="@mipmap/ic_user_default" />
 
@@ -44,7 +45,7 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:src="@drawable/ic_send_small"
-            android:tint="@color/colorPrimaryDark" />
+            android:tint="@color/colorPrimary" />
 
 
     </LinearLayout>
