--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_like_message_48"
-        android:title="@string/title_notifications" />
+        android:id="@+id/sturrd_profile"
+        android:icon="@drawable/ic_account_circle"
+        android:title="Profile" />
+
+    <item
+        android:id="@+id/sturrd_moments"
+        android:icon="@drawable/ic_search"
+        android:title="Explore" />
+    <item
+        android:id="@+id/sturrd_home"
+        android:icon="@drawable/ic_fire_heart"
+        android:title="Sturrd" />
+
+    <item
+        android:id="@+id/sturrd_matches"
+        android:icon="@drawable/ic_two_hearts_new"
+        android:title="Matches" />
+
+    <item
+        android:id="@+id/sturrd_messages"
+        android:icon="@drawable/ic_chats_new"
+        android:title="Messages" />
+
+
 
 </menu>
