--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#FC5B60</color>
-    <color name="colorPrimaryDark">#FC5B60</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#03A9F4</color>
     <color name="colorGray">#767676</color>
     <color name="colorGrayLight">#e9e9e9</color>
